--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -25,7 +25,7 @@
     --dark-hl-11: #569CD6;
     --light-hl-12: #FF0000;
     --dark-hl-12: #9CDCFE;
-    --light-code-background: #FFFFFF;
+    --light-code-background: #F5F5F5;
     --dark-code-background: #1E1E1E;
 }
 
